# 3D-CMCC-FEM

./: .gitignore  3D-CMCC-Forest-Model.vcproj  LICENSE  Makefile.in  README.md  S3-SensitivityAnalysis.Rmd  config.status  configure  configure.ac  stand_mod_vs_stand_profound.txt
software/3D-CMCC-Forest-Model/: -e_Soroe - Denmark_f_u_d_10000_2016_JUNE_10_txt.txt  .cproject  .gitignore  .gitignore~  .project  3D-CMCC-FEM-Shell-Script.launch  3D-CMCC-FEM-Shell_script-ISIMIP.launch  3D-CMCC-FEM-Shell_script.launch  3D-CMCC-FEM-bash_script.sh  3D-CMCC-FEM-bash_script_ISIMIP.launch  3D-CMCC-FEM-bash_script_ISIMIP.sh  3D-CMCC-FEM-bash_script_PAPER.launch  3D-CMCC-FEM-bash_script_PAPER.sh  3D-CMCC-FEM-v.4_User's_Guide.txt  3D-CMCC-Forest-Model.cbp  3D-CMCC-Forest-Model.depend  3D-CMCC-Forest-Model.layout  3D-CMCC-Forest-Model.sln  3D-CMCC-Forest-Model.vcproj  3D_CMCC_Forest_Model  GetPlotResults.R  GetPlotResults_Linux.R  GetPlotResults_PHOTOSYNTHESIS.R  GetPlotResults_TURNOVER.R  GetPlotResults_ct.R  GetPlotResults_ct_win.R  GetPlotResults_file.R  GetTestPlotResults.R  Makefile  Makefile.am  Makefile.in  STAND.csv  annual_gpp.nc  annual_npp.nc  colSums2.R  config.h  config.h.in  config.status  configure  configure.ac  (+19 more)
software/3D-CMCC-Forest-Model/Debug/: 3D_CMCC_Forest_Model  3D_CMCC_Forest_Model.svntmp  makefile  objects.mk
software/3D-CMCC-Forest-Model/Debug/src/: C-partitioning-allocation.d  allometry.d  biomass.d  canopy_cover.d  canopy_transpiration.d  common.d  cropmodel.d  cropmodel_daily.d  cropmodel_day.d  crowding-competition.d  dendrometry.d  establishment.d  garbage.d  initialization_biomass_data.d  initialization_site_data.d  io.d  light.d  litterfall.d  log.d  main.d  management.d  matrix.d  met_data.d  modifiers.d  parameters.d  partitioning-allocation.d  peak_lai.d  phenology.d  soil_evaporation.d  soilmodel.d  sort.d  subdir.mk  treemodel.d  turnover.d  vpd.d  wue.d
software/3D-CMCC-Forest-Model/R_Script/: Wang_script.R  multiline_plot.R
software/3D-CMCC-Forest-Model/R_Script/3D-CMCC_FEM_to_ISIMIP_Output_Conversion/: read3DCMCC_output
software/3D-CMCC-Forest-Model/Release/: sources.mk
software/3D-CMCC-Forest-Model/autom4te.cache/: output.1  traces.0
software/3D-CMCC-Forest-Model/doc/: 3D-CMCC-FEM-4.0_User_Guide.txt  3D-CMCC-FEM-5.0_User_Guide.txt  3D-CMCC-FEM-5.1_User_Guide.txt  3D-CMCC-FEM-5.x.x_Shell_script_User_Guide.txt  3D-CMCC-FEM-5.x.x_User_Guide.txt  3D-CMCC-FEM-v.4_User_Guide.txt  Incoming_longwave_Ribeca  autotools_usage.txt  longwave_from_metdata_Dario.m  minimal-book.txt  restore_previous_svn_revision.txt
software/3D-CMCC-Forest-Model/headers/: C-allocation.h  C-assimilation.h  C-balance.h  C-deciduous-partitioning-allocation.h  C-deciduous-partitioning.h  C-evergreen-partitioning-allocation.h  C-evergreen-partitioning.h  C-fruit-partitioning-allocation.h  CN-allocation.h  CN-balance.h  N-assimilation.h  Penman_Monteith.h  allometry.h  aut_respiration.h  balance.h  biomass.h  canopy_cover.h  canopy_evapotranspiration.h  canopy_interception.h  canopy_net_radiation.h  canopy_radiation.h  canopy_radiation_lw_band.h  canopy_radiation_sw_band.h  canopy_sensible_heat.h  canopy_temperature.h  cell_model.h  check_balance.h  check_prcp.h  common.h  constants.h  cue.h  cumulative_balance.h  decomposition.h  dendometry.h  evapotranspiration.h  fluxes.h  forest_tree_class.h  g-function.h  heat_fluxes.h  het_respiration.h  (+49 more)
software/3D-CMCC-Forest-Model/input/: .gitignore  .~lock.Relazioni allometriche.xlsx#  1526_961_2007.txt  1526_961_2007_con_tmax_tmin.txt  1526_962_2007.txt  1526_962_2008.txt  1526_962_input.txt  1526_962_input_2007.txt  1526_962_site.txt  1526_963_2007.txt  1526_963_input.txt  1526_963_site.txt  2001.txt  2002.txt  2003.txt  2004.txt  2005.txt  2006.txt  2007.txt  2008.txt  9999_699_2011.txt  Castaneasativa.txt  Fagus_sites.launch  Fagussylvatica.txt  ISIMIP_harvesting.csv  ISIMIP_management.xlsx  ISIMIP_thinning.csv  ISIMI_management.xlsx  New_configuration.launch  Quercus_cerris.txt  Quercuscerris.txt  input.txt  launch_parameters.txt  met_daily_file  output_vars.lst  quercus_deciduous.txt  quercus_evergreen.txt  settings.txt  site.txt  species.txt
software/3D-CMCC-Forest-Model/input/Bonis/: Bonis.launch  (+21 more)
software/3D-CMCC-Forest-Model/notes/: 3D-CMCC-FEM-v.4_User_Guide.txt  Modifiche  autotools_usage.txt  note_for_resolution_and_to_compile
software/3D-CMCC-Forest-Model/output/: .gitignore  3D-CMCC-v.5.2.2-ISIMIP-Soroe-2001-2099.xlsx  output.txt
software/3D-CMCC-Forest-Model/run_configurations/: Brasschaat_config.txt  Collelongo_config.txt  RunDebug  ssm_1l_config.txt
software/3D-CMCC-Forest-Model/src/: .cproject  3D-CMCC_FUNCTIONS.xlsx  3D_CMCC_Forest_Model  C-allocation.c  C-assimilation.c  C-assimilation.h  C-balance.c  C-deciduous-partitioning-allocation.c  C-deciduous-partitioning.c  C-evergreen-partitioning-allocation.c  C-evergreen-partitioning-allocation.h  C-evergreen-partitioning.c  C-fluxes.c  C-fruit-partitioning-allocation.c  C-partitioning-allocation.c  CN-allocation.c  CN-allocation_alessio.c  CN-balance.c  Fluxes.c  G-Function.c  Makefile  Makefile.am  Makefile.in  N-assimilation.c  N-stock.c  Penman_Monteith.c  Penman_Monteith.h  allometry.c  asw  aut_respiration.c  aut_respiration.h  balance.c  biomass.c  biomass_increment.c  canopy_cover.c  canopy_evapo_biome.c  canopy_evapotranspiration.c  canopy_evapotranspiration_biome.c  canopy_interception.c  canopy_net_radiation.c  (+155 more)
software/3D-CMCC-Forest-Model/tables/: Allometric_relationships.xlsx  CO2_mod_assimilation.xlsx  CO2_modifier_Franks.xlsx  CO_mod_transpiration.xlsx  Crown_height.xlsx  Farquhar_Sensitivity.R  Farquhar_Sensitivity_Update.R  H_Dbh_Summary.xls  Light_modifier_Makela.xlsx  Q10_acclimation.xlsx  Respiration_acclimation.xlsx  Respiration_acclimation_Atkin.xlsx  Respiration_acclimation_type_II.xlsx  SLA.xlsx  Turnover.xlsx  dendro.xlsx  light.xlsx  modifiers.xlsx  rain_interception.xlsx  soil_respiration_Hainich.xlsx  vertical_light_modifier.xlsx  ~$light.xlsx
software/3D-CMCC-Forest-Model/utilities/: launch_nc_input.bat  run_6_multi_nc_file.bat
(+3630 files in other folders)
